--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </header>
 
     <!-- Main Content -->
-    <main class="flex-grow max-w-6xl mx-auto w-full p-4 sm:p-6 lg:p-8">
+    <main class="flex-grow max-w-6xl mx-auto w-full p-4 pb-28 sm:p-6 sm:pb-32 lg:p-8 lg:pb-32">
         
         <!-- Dashboard Stats -->
         <section class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8">
